--- a/app/src/main/res/layout/activity_geolocation.xml
+++ b/app/src/main/res/layout/activity_geolocation.xml
@@ -13,6 +13,16 @@
         android:layout_height="match_parent"
         app:mapbox_cameraZoom="8" />
 
+    <ImageView
+        android:id="@+id/signup_back_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/ic_arrow_back_24"
+
+        />
+
 
     <Button
         android:id="@+id/startButton"
