--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -125,13 +125,13 @@
 
 
             <Button
-                android:id="@+id/nextRegister"
+                android:id="@+id/register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@color/colorBlack"
-                android:onClick="callNextRegister"
-                android:text="@string/next"
+                android:text="@string/register"
+                android:onClick="callRegisterUser"
                 android:textColor="@color/colorWhite"
                 android:transitionName="transition_next"/>
 
