--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreen"
+        android:background="@color/colorWelcome"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,26 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:text="HELLO FUCEK"
+            android:text="Rumah Makan Cilik"
             android:textColor="@color/colorBlack"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
-        <TextView
-            android:id="@+id/helloUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="15dp"
-            android:text="OwO"
-            android:textColor="@color/colorBlack"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/hello"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -189,7 +177,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/recommend_back"
+                android:background="@drawable/shape_kotak"
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="@id/cardLocation"
                 app:layout_constraintHorizontal_bias="0.0"
