--- a/app/src/main/res/layout/activity_geolocation.xml
+++ b/app/src/main/res/layout/activity_geolocation.xml
@@ -14,7 +14,7 @@
         app:mapbox_cameraZoom="8" />
 
     <ImageView
-        android:id="@+id/signup_back_button"
+        android:id="@+id/back_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
