--- a/app/src/main/res/layout/activity_menu_makanan.xml
+++ b/app/src/main/res/layout/activity_menu_makanan.xml
@@ -21,16 +21,23 @@
 
         </ImageView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_makanan"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="10dp"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
             app:layout_constraintStart_toEndOf="@id/view_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_shape"
-            tools:listitem="@layout/adapter_recycler_view" />
+            android:layout_width="match_parent"
+            android:layout_height="500dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/FoodRecyclerView"
+                android:layout_below="@+id/view_shape"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                tools:listitem="@layout/adapter_recycler_view">
+            </androidx.recyclerview.widget.RecyclerView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <TextView
             android:id="@+id/textView"
