--- a/app/src/main/res/layout/adapter_recycler_view.xml
+++ b/app/src/main/res/layout/adapter_recycler_view.xml
@@ -4,18 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="mkn"
-            type="com.arnawajuan.tubes_uts.makanan.Makanan" />
-    </data>
+<!--    <data>-->
+<!--        <variable-->
+<!--            name="mkn"-->
+<!--            type="com.arnawajuan.tubes_uts.makanan.Makanan" />-->
+<!--    </data>-->
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/ParentAdapter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/ParentAdapter"
+
             android:layout_width="377dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -37,7 +38,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="19dp"
-                    android:src="@{mkn.gambar}"
+                    android:src="@drawable/makanan_nasigoreng"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -51,7 +52,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="5dp"
                     android:maxLines="1"
-                    android:text="@{mkn.nama}"
+                    android:text="nama makanan"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/image_receipt"
@@ -63,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:maxLines="3"
-                    android:text="@{mkn.deskripsi}"
+                    android:text="deskripsi"
                     android:textSize="10sp"
                     app:layout_constraintEnd_toEndOf="@+id/tvNama"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -84,7 +85,7 @@
                     android:layout_width="56dp"
                     android:layout_height="21dp"
                     android:layout_marginTop="10dp"
-                    android:text="@{mkn.stringharga}"
+                    android:text="harga"
                     app:layout_constraintStart_toEndOf="@+id/tvRupiah"
                     app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />
 
@@ -92,7 +93,7 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
